feat: add Tailwind CSS configuration and extend theme with custom colors and animations
chore: update TypeScript configuration for improved path resolution and include nativewind types

feat: implement TRPC client setup with React Query for API communication

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,7 +6,7 @@ ENV PATH="$PNPM_HOME:$PATH"
 
 # Install required dependencies and global packages
 RUN npm install -g pnpm && \
-    npm install -g ts-node
+    npm install -g tsx
 
 WORKDIR /app/api
 
@@ -16,4 +16,4 @@ RUN pnpm i
 
 EXPOSE 4000
 
-CMD ["ts-node", "--transpile-only", "server.ts"]
+CMD ["tsx", "server.ts"]
