--- a/api/package.json
+++ b/api/package.json
@@ -12,8 +12,7 @@
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate",
     "prisma:push": "dotenv -e .env -- prisma db push",
-    "dev": "cd localDB && docker compose up -d && cd .. && ts-node-dev -r tsconfig-paths/register server.ts --watch",
-    "dev:cold": "cd localDB && docker compose up -d && cd .. && ts-node --transpile-only -r tsconfig-paths/register server.ts"
+    "dev": "cd localDB && docker compose up -d && cd .. && tsx watch -r tsconfig-paths/register server.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.10",
@@ -53,8 +52,7 @@
     "@types/node": "^22.10.10",
     "dotenv": "^16.4.7",
     "prisma": "6.13.0",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.4",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2"
   }
