feat: rename project from my-test-app to buildr and update related configurations
- Updated project name and slug in app.json and README.md
- Added CaptureScreen and index files for protected routes
- Implemented theme toggle and user menu in the main screen
- Adjusted sign-in form title to reflect new project name
- Updated package.json dependencies and removed unnecessary resolutions
- Enhanced layout with new protected routes for capture functionality

--- a/ui/app.json
+++ b/ui/app.json
@@ -1,30 +1,36 @@
 {
   "expo": {
-    "name": "my-test-app",
-    "slug": "my-test-app",
+    "name": "buildr",
+    "slug": "buildr",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "my-test-app",
+    "scheme": "buildr",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "Allow $(PRODUCT_NAME) to access your photos",
+        "NSPhotoLibraryAddUsageDescription": "Allow $(PRODUCT_NAME) to save photos",
+        "NSCameraUsageDescription": "Allow $(PRODUCT_NAME) to use your camera",
+        "NSMicrophoneUsageDescription": "Allow $(PRODUCT_NAME) to use your microphone"
+      },
+      "bundleIdentifier": "com.buildr",
+      "appleTeamId": "W2UDSZK955"
     },
     "android": {
       "edgeToEdgeEnabled": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.buildr"
     },
     "web": {
       "bundler": "metro",
