--- a/api/fly.toml
+++ b/api/fly.toml
@@ -1,27 +1,36 @@
+# fly.toml app configuration file generated for buildr-backend on 2025-08-30T07:32:28+02:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
 app = 'buildr-backend'
 primary_region = 'fra'
+
+[build]
+
+[deploy]
+  strategy = 'rolling'
 
 [http_service]
   internal_port = 4000
   force_https = true
   min_machines_running = 1
   processes = ['app']
+
   [[http_service.checks]]
-    grace_period = "60s"
-    interval = "15s"
-    path = "/api/health"
-    method = "GET"
-    timeout = "15s"
+    interval = '15s'
+    timeout = '15s'
+    grace_period = '1m0s'
+    method = 'GET'
+    path = '/api/health'
+    protocol = 'http'
     tls_skip_verify = true
-    protocol = "http"
+
     [http_service.checks.headers]
-      X-Forwarded-Proto = "https"
+      X-Forwarded-Proto = 'https'
 
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
-
-[deploy]
-  strategy = "rolling"
