--- a/api/package.json
+++ b/api/package.json
@@ -25,11 +25,11 @@
     "@fastify/websocket": "^11.2.0",
     "@mastra/core": "^0.13.2",
     "@openrouter/ai-sdk-provider": "^0.7.3",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "6.14.0",
     "@sentry/node": "^9.40.0",
     "@sentry/profiling-node": "^9.40.0",
-    "@trpc/client": "^11.4.4",
-    "@trpc/server": "^11.4.4",
+    "@trpc/client": "^11.5.0",
+    "@trpc/server": "^11.5.0",
     "ai": "^4.3.15",
     "exa-js": "^1.8.23",
     "expo-server-sdk": "^3.15.0",
@@ -38,7 +38,7 @@
     "lodash": "^4.17.21",
     "ms": "^2.1.3",
     "pino-pretty": "^13.0.0",
-    "prisma-json-types-generator": "^3.5.2",
+    "prisma-json-types-generator": "^3.6.0",
     "prisma-zod-generator": "^1.2.0",
     "superjson": "^2.2.2",
     "ts-essentials": "^10.1.1",
@@ -51,9 +51,9 @@
     "@types/ms": "^2.1.0",
     "@types/node": "^22.10.10",
     "dotenv": "^16.4.7",
-    "prisma": "6.13.0",
+    "prisma": "6.14.0",
     "tsx": "^4.20.4",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.9.2"
   }
 }
