--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,7 @@
     "install:local": "pnpm install && pnpm prisma:push",
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate",
-    "prisma:push": "dotenv -e .env prisma db push",
+    "prisma:push": "prisma db push",
     "dev": "cd localDB && docker compose up -d && cd .. && tsx watch -r tsconfig-paths/register server.ts"
   },
   "dependencies": {
