--- a/api/package.json
+++ b/api/package.json
@@ -40,6 +40,7 @@
     "pino-pretty": "^13.0.0",
     "prisma-json-types-generator": "^3.6.0",
     "prisma-zod-generator": "^1.2.0",
+    "resend": "^6.0.2",
     "superjson": "^2.2.2",
     "ts-essentials": "^10.1.1",
     "zod": "^3.25.76",
@@ -52,8 +53,8 @@
     "@types/node": "^22.10.10",
     "dotenv": "^16.4.7",
     "prisma": "6.14.0",
-    "tsx": "^4.20.4",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   }
 }
