--- a/api/fly.toml
+++ b/api/fly.toml
@@ -1,23 +1,27 @@
-# fly.toml app configuration file generated for buildr on 2025-08-31T10:43:26Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'buildr'
-primary_region = 'ams'
-
-[build]
+app = 'buildr-backend'
+primary_region = 'fra'
 
 [http_service]
-  internal_port = 8080
+  internal_port = 4001
   force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ['app']
+  [[http_service.checks]]
+    grace_period = "60s"
+    interval = "15s"
+    path = "/api/health"
+    method = "GET"
+    timeout = "15s"
+    tls_skip_verify = true
+    protocol = "http"
+    [http_service.checks.headers]
+      X-Forwarded-Proto = "https"
 
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
+
+[deploy]
+  strategy = "rolling"
