feat: add create project flow components and schema
- Implemented OptionCard component for selectable options.
- Created StepBasic for project name and date inputs.
- Added StepIndicator for visual step navigation.
- Developed StepReview to display project details for review.
- Introduced StepRoomDetails for room-specific expectations and media uploads.
- Created StepRooms to select room types with OptionCard.
- Implemented StepSizePhotos for project size selection and image uploads.
- Added StepType for selecting project type with OptionCard.
- Defined project schema using Zod for form validation.
- Established Zustand store for managing project creation state.
- Integrated environment variable validation with Zod.
- Updated ESLint and Prettier configurations for code quality.
- Added drag-and-drop support for media uploads in StepRoomDetails.
- Enhanced social connections component by removing unused variables.

--- a/api/package.json
+++ b/api/package.json
@@ -30,9 +30,10 @@
     "@sentry/profiling-node": "^9.40.0",
     "@trpc/client": "^11.5.0",
     "@trpc/server": "^11.5.0",
-    "ai": "^4.3.15",
-    "exa-js": "^1.8.23",
-    "expo-server-sdk": "^3.15.0",
+    "@vercel/blob": "^1.1.1",
+    "ai": "^5.0.44",
+    "exa-js": "^1.9.3",
+    "expo-server-sdk": "^4.0.0",
     "fastify": "^5.4.0",
     "fastify-plugin": "^5.0.1",
     "lodash": "^4.17.21",
@@ -43,7 +44,7 @@
     "resend": "^6.0.2",
     "superjson": "^2.2.2",
     "ts-essentials": "^10.1.1",
-    "zod": "^3.25.76",
+    "zod": "^4.1.5",
     "zod-prisma-types": "^3.2.4",
     "zod-to-json-schema": "^3.24.6"
   },
