--- a/ui/package.json
+++ b/ui/package.json
@@ -8,10 +8,15 @@
     "ios": "expo start -c --ios",
     "web": "expo start -c --web",
     "clean": "rm -rf .expo node_modules",
-    "build:web": "expo export -p web"
+    "build:web": "expo export -p web",
+    "lint": "eslint --max-warnings=0 .",
+    "lint:fix": "eslint . --fix",
+    "prettier": "prettier --write '**/*.{js,ts,tsx,json,md,css}'",
+    "prettier:check": "prettier --check '**/*.{js,ts,tsx,json,md,css}'"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.14.14",
+    "@hookform/devtools": "^4.4.0",
     "@hookform/resolvers": "^5.2.1",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/native": "^7.0.0",
@@ -21,16 +26,17 @@
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
-    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query": "^5.87.4",
     "@trpc/client": "^11.5.0",
     "@trpc/react-query": "^11.5.0",
     "@trpc/server": "^11.5.0",
     "@trpc/tanstack-react-query": "^11.5.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "^53.0.22",
     "expo-auth-session": "~6.2.1",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
     "expo-secure-store": "~14.2.4",
@@ -52,15 +58,18 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
-    "tailwind-merge": "^2.2.1",
+    "react-native-worklets": "^0.5.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "trpc-zustand": "^1.1.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~19.0.14",
+    "eslint": "^9.25.1",
+    "eslint-config-expo": "^9.2.0",
+    "eslint-config-prettier": "^10.1.2",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.8.3"
