feat: enhance project form store with persistence and reset functionality
- Integrated AsyncStorage for persisting form data in useCreateProjectFormStore.
- Added reset method to clear the form state.
- Removed unused step4 from the form state and related types.

fix: update TRPC client URL construction

- Ensured the API endpoint includes '/api' when defined.
- Added type inference for router inputs and outputs for better type safety.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
-    "compilerOptions": {
-        "skipLibCheck": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true
-    },
-    "references": [{ "path": "./api" }, { "path": "./ui" }],
-    "files": [],
-    "include": [],
-    "exclude": ["**/node_modules"]
+  "compilerOptions": {
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true
+  },
+  "references": [{ "path": "./api" }, { "path": "./ui" }, { "path": "./livekit" }],
+  "files": [],
+  "include": [],
+  "exclude": ["**/node_modules"]
 }
