--- a/ui/.env
+++ b/ui/.env
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Z3JhbmQtZ2Vja28tNS5jbGVyay5hY2NvdW50cy5kZXYk
-EXPO_PUBLIC_API_ENDPOINT=http://localhost:4001/api
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cmVzb2x2ZWQtdGljay03OC5jbGVyay5hY2NvdW50cy5kZXYk
+EXPO_PUBLIC_API_ENDPOINT=http://localhost:4001
