--- a/api/package.json
+++ b/api/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "server.ts",
   "license": "UNLICENSED",
-  "packageManager": "pnpm@10.14.0",
   "private": true,
   "scripts": {
     "postinstall": "pnpm prisma:generate",
     "install:local": "pnpm install && pnpm prisma:push",
     "typecheck": "tsc --noEmit",
-    "prisma:generate": "prisma generate",
+    "prisma:generate": "prisma generate --schema=./prisma/schema && node scripts/disable-zod-typecheck.js",
     "prisma:push": "prisma db push",
     "dev": "cd localDB && docker compose up -d && cd .. && tsx watch -r tsconfig-paths/register server.ts"
   },
@@ -23,19 +22,21 @@
     "@fastify/multipart": "^9.0.3",
     "@fastify/sensible": "^6.0.2",
     "@fastify/websocket": "^11.2.0",
+    "@livekit/protocol": "^1.42.1",
     "@mastra/core": "^0.13.2",
     "@openrouter/ai-sdk-provider": "^0.7.3",
     "@prisma/client": "6.14.0",
     "@sentry/node": "^9.40.0",
     "@sentry/profiling-node": "^9.40.0",
+    "@tigrisdata/storage": "^2.0.0",
     "@trpc/client": "^11.5.0",
     "@trpc/server": "^11.5.0",
-    "@vercel/blob": "^1.1.1",
     "ai": "^5.0.44",
     "exa-js": "^1.9.3",
     "expo-server-sdk": "^4.0.0",
     "fastify": "^5.4.0",
     "fastify-plugin": "^5.0.1",
+    "livekit-server-sdk": "^2.14.0",
     "lodash": "^4.17.21",
     "ms": "^2.1.3",
     "pino-pretty": "^13.0.0",
