--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,9 @@
     "@clerk/clerk-expo": "^2.14.14",
     "@hookform/devtools": "^4.4.0",
     "@hookform/resolvers": "^5.2.1",
+    "@livekit/components-react": "^2.9.15",
+    "@livekit/react-native": "^2.9.3",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/native": "^7.0.0",
     "@redux-devtools/extension": "^3.3.0",
@@ -29,6 +32,7 @@
     "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@tanstack/react-query": "^5.87.4",
+    "@tigrisdata/storage": "^2.0.0",
     "@trpc/client": "^11.5.0",
     "@trpc/react-query": "^11.5.0",
     "@trpc/server": "^11.5.0",
@@ -48,6 +52,7 @@
     "expo-system-ui": "~5.0.11",
     "expo-video": "^2.2.2",
     "expo-web-browser": "~14.2.0",
+    "livekit-client": "^2.15.10",
     "lucide-react-native": "^0.511.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
