--- a/livekit/package.json
+++ b/livekit/package.json
@@ -30,6 +30,7 @@
     "@livekit/agents-plugin-livekit": "~1.0.11",
     "@livekit/agents-plugin-silero": "~1.0.11",
     "@livekit/noise-cancellation-node": "~0.1.9",
-    "dotenv": "^16.6.1"
+    "dotenv": "^16.6.1",
+    "zod": "^4.1.12"
   }
 }
