--- a/livekit/package.json
+++ b/livekit/package.json
@@ -26,6 +26,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@getzep/zep-cloud": "^3.5.0",
     "@livekit/agents": "~1.0.11",
     "@livekit/agents-plugin-livekit": "~1.0.11",
     "@livekit/agents-plugin-silero": "~1.0.11",
